Fixed bug with dark mode not applying to timer input segments

--- a/public/code/master.css
+++ b/public/code/master.css
@@ -691,6 +691,6 @@ li svg {
 .dark #submit { color: rgb(79, 184, 255); }
 
 /* Washed out red colours */
-.dark #span1, .dark #span2, .dark #span3, .dark #hours, .dark #minutes, .dark #seconds  {
+.dark #span1, .dark #span2, .dark #span3, .dark #span4, .dark #span5, .dark #span6, .dark #hours, .dark #minutes, .dark #seconds  {
   color: rgb(255, 43, 43);
 }
